Update Hybrid recommendation system.ipynb

--- a/Hybrid recommendation system.ipynb
+++ b/Hybrid recommendation system.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Hybrid recomendation system that uses SVD and slope one algorithims trained to predict each users rating of each movie using\n",
     "a dataset consisting of the users ratings of each movie. \n",
-    "\n",
+    "The data is derived from the MovieLens data [here](https://grouplens.org/datasets/movielens/).  A smaller sample has been culled so the processing is faster, but the data is user reviews of different movies.  We have information on the user, movie, and the associated ratings when they exist."\n",
     "This code uses the SUPRISE library made by scikit for recommendation systems. "
    ]
   },
